# liulian-api

./: .gitignore  README.md  TASKS.md  docker-compose.dev.yml  pyproject.toml
liulian_api/: __init__.py  config.py  main.py
liulian_api/data/: __init__.py  swiss_river.py
liulian_api/routers/: __init__.py  alerts.py  datasets.py  experiments.py  forecasts.py  health.py  models.py  reports.py
tests/: test_health.py
