[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liulian-api"
version = "0.1.0"
description = "LIULIAN HTTP gateway. FastAPI over the liulian-python research core; OpenAPI source-of-truth for web + mobile + SDK."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Linlin Jia", email = "linlin.jia@unibe.ch" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "arq>=0.26",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "minio>=7.2",
    "structlog>=24.0",
    "rich>=13.0",
    # liulian-python: research core (pip-installable; pinned by version)
    "liulian @ git+https://github.com/jajupmochi/liulian-python@main",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
    "ipython>=8.0",
]

[project.scripts]
liulian-api = "liulian_api.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["liulian_api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"
